working on session and purchase
