# app/src/controllers/purchaseSessions.js
@@ -1,6 +1,6 @@
 module.exports = function(invariant) {
   return function (data) {
-    invariant(data.clientId, 'purchaseSessions requires that you pass the clients Id');
+    invariant(data.clientId, 'purchases requires that you pass the clients Id');
     invariant(data.fullHour
       || data.fullHour
       || data.fullHourTenPack
@@ -8,7 +8,7 @@ module.exports = function(invariant) {
       || data.halfHourTenPack
       || data.pair
       || data.pairTenPack
-      , 'purchaseSessions requires purchase at least one session');
+      , 'purchases requires purchase at least one session');
     return data;
   };
 };
